--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 						</header>
 						<div class="content">
 							<p><strong>In a nutshell</strong> we believe code can augment mathematics and make it more accessible.</p>
-							<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/78570700?color=fa5f76&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-							<p><a href="https://vimeo.com/78570700">When I design</a> from <a href="https://vimeo.com/user17719152">Niklas Arthursson</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+							<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/329011380?color=fa5f76&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+							<p><a href="https://vimeo.com/329011380">GSoC raw</a> from <a href="https://vimeo.com/user97140644">Alex &amp; Oskar</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 						</div>
 					</section>
 
