Minor content edits, site runs smooth

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 
 						<p><strong>Coding | MAY 27 - AUG 19 |</strong> We plan to work on production while getting some early feedback from users, and adjusting the code as we progress.</p>
 
-						<p><strong>Submission and Final Evaluation | AUG 19 - AUG 26 |</strong> Submit our code to the repository, and finish off with the final evaluation. Go out and celebrate, pizza is mandatory.</p>
+						<p><strong>Submission and Final Evaluation | AUG 19 - AUG 26 |</strong> Submit our code to the repository, and finish off with the final evaluation.</p>
+						<p>Go out and celebrate. Pizza is mandatory.</p>
 					</div>
 				</section>
 
