--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 						<p><strong>Community Bonding | MAY 9 - MAY 27 |</strong> We plan to run design sprints based on our mentor's feedback, in order to produce prototypes that would eventually turn into library components. We want to interview members of the community to pinpoint their needs and gather their feedback, followed by a round of user testing with our prototypes. This would conclude with a final list of components for production.</p>
 
-						<p><strong>Coding | MAY 27 - AUG 19 |</strong> We plan to work on production while getting some early feedback from users, and adjusting the code as we progress.</p>
+						<p><strong>Coding | MAY 27 - AUG 19 |</strong> We plan to work on production while getting some early feedback from users, while adjusting the code as we progress.</p>
 
 						<p><strong>Submission and Final Evaluation | AUG 19 - AUG 26 |</strong> Submit our code to the repository, and finish off with the final evaluation.</p>
 						<p>Go out and celebrate. Pizza is mandatory.</p>
